add validation & edit virtual data
