# app/Http/Resources/TimezoneResource.php
@@ -4,7 +4,7 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class LocationResource extends JsonResource
+class TimezoneResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -15,9 +15,9 @@ class LocationResource extends JsonResource
     public function toArray($request)
     {
         return [
-            'id' => $this->id,
-            'title' => $this->title,
-            'timezone' => new TimezoneResource($this->timezone)
+                "id" => $this->id,
+                "title" => $this->name,
+                "offset" => $this->offset
         ];
     }
 }
