# storage/api-docs/api-docs.json
@@ -9,11 +9,7 @@
     },
     "servers": [
         {
-            "url": "http://localhost/api/v1",
-            "description": "Qberry Laravel API server"
-        },
-        {
-            "url": "http://qbr.local/api/v1",
+            "url": "http://localhost/api/v1/",
             "description": "Qberry Laravel API server"
         }
     ],
@@ -33,6 +29,81 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "Location"
+                ],
+                "summary": "Store new location",
+                "description": "Return created location data",
+                "operationId": "locationAdd",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/StoreLocationRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Location"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/locations/{id}": {
+            "get": {
+                "tags": [
+                    "Location"
+                ],
+                "summary": "Get location information",
+                "description": "Returns location data",
+                "operationId": "locationGet",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Location id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Location"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
             }
         },
         "/timezones": {
@@ -42,32 +113,34 @@
                 ],
                 "summary": "Get all timezones",
                 "operationId": "timezonesAll",
+                "responses": {
+                    "200": {
+                        "description": "Successfull operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
+        "/timezones/{id}": {
+            "get": {
+                "tags": [
+                    "Timezone"
+                ],
+                "summary": "Get timezone data",
+                "operationId": "timezoneGet",
                 "parameters": [
                     {
-                        "name": "all",
-                        "in": "query",
-                        "description": "Get all locations or with paginate",
-                        "required": false,
-                        "schema": {
-                            "type": "boolean"
-                        }
-                    },
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "required": false,
+                        "name": "id",
+                        "in": "path",
+                        "description": "Timezone id",
+                        "required": true,
                         "schema": {
                             "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "Part of name (%str%)",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 ],
@@ -77,12 +150,128 @@
                         "content": {
                             "application/json": {}
                         }
+                    },
+                    "404": {
+                        "description": "Bad Request"
                     }
                 }
             }
         }
     },
     "components": {
+        "schemas": {
+            "Location": {
+                "title": "Location",
+                "description": "Location model",
+                "properties": {
+                    "id": {
+                        "title": "id",
+                        "description": "ID",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "title": {
+                        "title": "title",
+                        "description": "Location title",
+                        "type": "string",
+                        "example": "Kiyv"
+                    },
+                    "timezone": {
+                        "$ref": "#/components/schemas/Timezone"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Location"
+                }
+            },
+            "Timezone": {
+                "title": "Timezone",
+                "description": "Timezone model",
+                "properties": {
+                    "id": {
+                        "title": "id",
+                        "description": "ID",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "title": {
+                        "title": "title",
+                        "description": "Time zone",
+                        "type": "string",
+                        "example": "Europe/Kiev"
+                    },
+                    "offset": {
+                        "title": "offset",
+                        "description": "Time zone offset",
+                        "example": "+03:00"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Timezone"
+                }
+            },
+            "LocationResource": {
+                "title": "LocationResource",
+                "description": "Location resource",
+                "properties": {
+                    "data": {
+                        "title": "Data",
+                        "description": "Data wrapper",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Location"
+                        }
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "LocationResource"
+                }
+            },
+            "LocationsCollection": {
+                "title": "LocationsCollection",
+                "description": "Locations collection",
+                "properties": {
+                    "data": {
+                        "title": "Data",
+                        "description": "Data wrapper",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Location"
+                        }
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "LocationResource"
+                }
+            },
+            "StoreLocationRequest": {
+                "title": "Store Location request",
+                "description": "Store Location request body data",
+                "required": [
+                    "title",
+                    "timezone_id"
+                ],
+                "properties": {
+                    "title": {
+                        "title": "title",
+                        "description": "Name of the new location",
+                        "example": "Kiyv"
+                    },
+                    "timezone_id": {
+                        "title": "timezone_id",
+                        "description": "Timezone`s id of the new location",
+                        "example": "337"
+                    }
+                },
+                "type": "object"
+            }
+        },
         "securitySchemes": {
             "X-API-TOKEN": {
                 "type": "apiKey",
